--- a/alvr/client_core/Cargo.toml
+++ b/alvr/client_core/Cargo.toml
@@ -30,6 +30,7 @@ serde = "1"
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 jni = "0.21"
+stb_image_write_rust = { git = "https://github.com/StbRust/stb_image_write_rust.git" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
